# xpainter

./: Brushes.cpp  Brushes.h  CMakeLists.txt  drawarea.cpp  drawarea.h  drawarea.ui  main.cpp  paint3d.cpp  paint3d.h  shapes2D.cpp  shapes2D.h  shapes2D.ui  shapes3D.cpp  shapes3D.h
Resources/: brushes resources.qrc  resources.qrc
